2018-05-03  Filip Pizlo  <fpizlo@apple.com>

        Strings should not be allocated in a gigacage
        https://bugs.webkit.org/show_bug.cgi?id=185218

        Reviewed by Saam Barati.
        
        * WTF.xcodeproj/project.pbxproj:
        * wtf/Deque.h:
        * wtf/Forward.h:
        * wtf/Gigacage.h:
        (Gigacage::name):
        (Gigacage::basePtr):
        * wtf/Vector.h:
        (WTF::VectorBufferBase::allocateBuffer):
        (WTF::VectorBufferBase::tryAllocateBuffer):
        (WTF::VectorBufferBase::reallocateBuffer):
        (WTF::VectorBufferBase::deallocateBuffer):
        (WTF::minCapacity>::Vector):
        (WTF::=):
        (WTF::minCapacity>::contains const):
        (WTF::minCapacity>::findMatching const):
        (WTF::minCapacity>::find const):
        (WTF::minCapacity>::reverseFind const):
        (WTF::minCapacity>::appendIfNotContains):
        (WTF::minCapacity>::fill):
        (WTF::minCapacity>::appendRange):
        (WTF::minCapacity>::expandCapacity):
        (WTF::minCapacity>::tryExpandCapacity):
        (WTF::minCapacity>::resize):
        (WTF::minCapacity>::resizeToFit):
        (WTF::minCapacity>::shrink):
        (WTF::minCapacity>::grow):
        (WTF::minCapacity>::asanSetInitialBufferSizeTo):
        (WTF::minCapacity>::asanSetBufferSizeToFullCapacity):
        (WTF::minCapacity>::asanBufferSizeWillChangeTo):
        (WTF::minCapacity>::reserveCapacity):
        (WTF::minCapacity>::tryReserveCapacity):
        (WTF::minCapacity>::reserveInitialCapacity):
        (WTF::minCapacity>::shrinkCapacity):
        (WTF::minCapacity>::append):
        (WTF::minCapacity>::tryAppend):
        (WTF::minCapacity>::constructAndAppend):
        (WTF::minCapacity>::tryConstructAndAppend):
        (WTF::minCapacity>::appendSlowCase):
        (WTF::minCapacity>::constructAndAppendSlowCase):
        (WTF::minCapacity>::tryConstructAndAppendSlowCase):
        (WTF::minCapacity>::uncheckedAppend):