@@ -47,6 +47,10 @@
 # include <wtf/Compiler.h>
 # include <wtf/StdLibExtras.h>
 
+#if !COMPILER(MSVC) && !PLATFORM(COCOA) && __has_include(<optional>)
+# include <optional>
+#else
+
 # define TR2_OPTIONAL_REQUIRES(...) typename std::enable_if<__VA_ARGS__::value, bool>::type = false
 
 # if defined __GNUC__ // NOTE: GNUC is also defined for Clang
@@ -1012,20 +1016,6 @@ constexpr optional<X&> make_optional(std::reference_wrapper<X> v)
 
 } // namespace std
 
-namespace WTF {
-
-// -- WebKit Additions --
-template <class OptionalType, class Callback>
-ALWAYS_INLINE
-auto valueOrCompute(OptionalType optional, Callback callback) -> typename OptionalType::value_type
-{
-    if (optional)
-        return *optional;
-    return callback();
-}
-
-} // namespace WTF
-
 namespace std
 {
   template <typename T>
@@ -1053,5 +1043,21 @@ namespace std
 
 # undef TR2_OPTIONAL_REQUIRES
 # undef TR2_OPTIONAL_ASSERTED_EXPRESSION
+
+#endif // defined(__cpp_lib_optional)
+
+namespace WTF {
+
+// -- WebKit Additions --
+template <class OptionalType, class Callback>
+ALWAYS_INLINE
+auto valueOrCompute(OptionalType optional, Callback callback) -> typename OptionalType::value_type
+{
+    if (optional)
+        return *optional;
+    return callback();
+}
+
+} // namespace WTF
 
 using WTF::valueOrCompute;
